@@ -3696,7 +3696,20 @@ gimp_prop_expander_notify (GObject     *config,
 /*  private utility functions  */
 /*******************************/
 
-static GQuark param_spec_quark = 0;
+static GQuark gimp_prop_widgets_param_spec_quark (void) G_GNUC_CONST;
+
+#define PARAM_SPEC_QUARK (gimp_prop_widgets_param_spec_quark ())
+
+static GQuark
+gimp_prop_widgets_param_spec_quark (void)
+{
+  static GQuark param_spec_quark = 0;
+
+  if (! param_spec_quark)
+    param_spec_quark = g_quark_from_static_string ("gimp-config-param-spec");
+
+  return param_spec_quark;
+}
 
 static void
 set_param_spec (GObject     *object,
@@ -3705,10 +3718,7 @@ set_param_spec (GObject     *object,
 {
   if (object)
     {
-      if (! param_spec_quark)
-        param_spec_quark = g_quark_from_static_string ("gimp-config-param-spec");
-
-      g_object_set_qdata (object, param_spec_quark, param_spec);
+      g_object_set_qdata (object, PARAM_SPEC_QUARK, param_spec);
     }
 
   if (widget)
@@ -3742,10 +3752,7 @@ set_radio_spec (GObject    *object,
 static GParamSpec *
 get_param_spec (GObject *object)
 {
-  if (! param_spec_quark)
-    param_spec_quark = g_quark_from_static_string ("gimp-config-param-spec");
-
-  return g_object_get_qdata (object, param_spec_quark);
+  return g_object_get_qdata (object, PARAM_SPEC_QUARK);
 }
 
 static GParamSpec *
